unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/GC_Design_Request_Form_Budget__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) Design Request Form Budget Custom Object.</description>
    <label>Design Request Form Budget</label>
    <nameField>
        <displayFormat>DRFB-{0000000}</displayFormat>
        <label>Design Request Form Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Request Form Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>