unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag for revisions, most current revision is active, older revisions are inactive</description>
    <inlineHelpText>Flag for revisions, most current revision is active, older revisions are inactive</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>