unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal Lookup to Connect2 Show.  This is set via insert / update trigger when Design Request Form is set.  It is used internally when adding show team member assignments.</description>
    <inlineHelpText>Internal Lookup to Connect2 Show.  This is set via insert / update trigger when Design Request Form is set.  It is used internally when adding show team member assignments.</inlineHelpText>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Design Request Form Budgets</relationshipLabel>
    <relationshipName>Design_Request_Form_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>