unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Design_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Design_Request_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Request Form</label>
    <referenceTo>GC_Design_Request_Form__c</referenceTo>
    <relationshipName>Design_Request_Forms_Budget</relationshipName>
    <type>Lookup</type>
</CustomField>