unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Design_Style_Guide_Formula_e_hrs__c.field-meta.xml
<CustomField>
    <fullName>Design_Style_Guide_Formula_e_hrs__c</fullName>
    <formula>New_Concept_Design_Style_Guide__c * New_Concept_Design_Style_Guide_hr_u__c * 0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Style Guide Formula - e-hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>