unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Detail_Extract_Pull_List_Structure_hr_u__c.field-meta.xml
<CustomField>
    <fullName>Detail_Extract_Pull_List_Structure_hr_u__c</fullName>
    <defaultValue>2.5</defaultValue>
    <description>Estimate of how many hours per unit pertaining to new detail/extract/pull list structures.</description>
    <inlineHelpText>Estimate of how many hours per unit pertaining to new detail/extract/pull list structures</inlineHelpText>
    <label>Detail/Extract/Pull List Structures-hr/u</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>