unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Detail_Extract_Pull_List_Structures__c.field-meta.xml
<CustomField>
    <fullName>Detail_Extract_Pull_List_Structures__c</fullName>
    <description>Number of units pertaining to Detail/Extract/Pull List brand new Structures.</description>
    <label>Detail/Extract/Pull List Structures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>