unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Director_AM_Approver__c.field-meta.xml
<CustomField>
    <fullName>Director_AM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Director of Account Management Approver to be emailed when Approval Process kicks off.  This is set when the Next Approver is set by submitting for approval and prior to starting the approval process.</description>
    <inlineHelpText>Director of Account Management Approver to be emailed when Approval Process kicks off.</inlineHelpText>
    <label>Director_AM_Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Request_Form_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>