unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Est_Design_Hours_Agreed_Upon__c.field-meta.xml
<CustomField>
    <fullName>Est_Design_Hours_Agreed_Upon__c</fullName>
    <description>Estimated design hours agreed upon.</description>
    <label>Est. Design Hours Agreed Upon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>