unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Existing_Line_Drawing_Blackline__c.field-meta.xml
<CustomField>
    <fullName>Existing_Line_Drawing_Blackline__c</fullName>
    <description>Estimate for how many revisions may occur pertaining to existing line drawing/blackline only.</description>
    <inlineHelpText>Estimate for how many revisions may occur pertaining to existing line drawing/blackline only.</inlineHelpText>
    <label>Existing Line Drawing/Blackline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>