unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Existing_Line_Drawing_Blackline_hr_u__c.field-meta.xml
<CustomField>
    <fullName>Existing_Line_Drawing_Blackline_hr_u__c</fullName>
    <description>Estimate of how many hours per unit pertaining to existing line drawing/blackline.</description>
    <inlineHelpText>Estimate of how many hours per unit pertaining to existing line drawing/blackline.</inlineHelpText>
    <label>Existing Line Drawing/Blackline -hr/u</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>