unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Existing_Structures_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Existing_Structures_Rendering__c</fullName>
    <description>Estimate for how many revisions may occur pertaining to existing structures being rendered.</description>
    <inlineHelpText>Estimate for how many revisions may occur pertaining to existing structures being rendered.</inlineHelpText>
    <label>Existing Structures Rendering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>