unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Existing_Structures_Rendering_hr_u__c.field-meta.xml
<CustomField>
    <fullName>Existing_Structures_Rendering_hr_u__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Estimate of how many hours per unit pertaining to existing structures rendered.</description>
    <inlineHelpText>Estimate of how many hours per unit pertaining to existing structures rendered.</inlineHelpText>
    <label>Existing Structures Rendering - hr/u</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>