unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Concept_Design_Style_Guide__c.field-meta.xml
<CustomField>
    <fullName>New_Concept_Design_Style_Guide__c</fullName>
    <description>Estimate for how many revisions may occur pertaining to the new concept/design style guide.</description>
    <inlineHelpText>Estimate for how many revisions may occur pertaining to the new concept/design style guide.</inlineHelpText>
    <label>New Concept/Design Style Guide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>