unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Concept_Design_Style_Guide_hr_u__c.field-meta.xml
<CustomField>
    <fullName>New_Concept_Design_Style_Guide_hr_u__c</fullName>
    <defaultValue>32</defaultValue>
    <description>Estimate of how many hours per unit pertaining to the new concept/design style guide.</description>
    <label>New Concept/Design Style Guide - hr/u</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>