unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Concept_Design_Style_Guide_Units__c.field-meta.xml
<CustomField>
    <fullName>New_Concept_Design_Style_Guide_Units__c</fullName>
    <description>Number of units pertaining to concept/design style.</description>
    <label>New Concept/Design Style Guide - #Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>