unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Line_Drawing_Blackline_Only_Units__c.field-meta.xml
<CustomField>
    <fullName>New_Line_Drawing_Blackline_Only_Units__c</fullName>
    <description>Number of units pertaining to new line drawing/blackline</description>
    <label>New Line Drawing/Blackline Only - #Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>