unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Line_Drawing_Formula_e_hrs__c.field-meta.xml
<CustomField>
    <fullName>New_Line_Drawing_Formula_e_hrs__c</fullName>
    <formula>New_Line_Drawing_Blackline_Only__c * New_Line_Drawing_Blackline_hr_u__c * 0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Line Drawing Formula - e-hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>