unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Structures_Rendered_Formula_e_hrs__c.field-meta.xml
<CustomField>
    <fullName>New_Structures_Rendered_Formula_e_hrs__c</fullName>
    <formula>New_Structures_to_be_Rendered__c * New_Structures_to_be_Rendered_hr_u__c * 0.6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Structures Rendered Formula - e -hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>