unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/New_Structures_to_be_Rendered_hr_u__c.field-meta.xml
<CustomField>
    <fullName>New_Structures_to_be_Rendered_hr_u__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Estimate of how many hours per unit pertaining to new structures rendered.</description>
    <inlineHelpText>Estimate of how many hours per unit pertaining to new structures rendered.</inlineHelpText>
    <label>New Structures to be Rendered - hr/u</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>