unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Next_ApproverSTM__c.field-meta.xml
<CustomField>
    <fullName>Next_ApproverSTM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Team_Member__c.Show_Role__c</field>
            <operation>contains</operation>
            <value>Director of Account Management</value>
        </filterItems>
        <filterItems>
            <field>$Source.Connect2_Show__c</field>
            <operation>equals</operation>
            <valueField>GC_Show_Team_Member__c.Connect2_Show__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Team_Member__c</referenceTo>
    <relationshipLabel>Design Request Form Budgets</relationshipLabel>
    <relationshipName>Design_Request_Form_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>