unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Previous_Revision__c.field-meta.xml
<CustomField>
    <fullName>Previous_Revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous version of budget before current one</description>
    <label>Previous Revision</label>
    <referenceTo>GC_Design_Request_Form_Budget__c</referenceTo>
    <relationshipLabel>Design Request Form Budgets</relationshipLabel>
    <relationshipName>Previous_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>