unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Revision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>