unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <description>Budget available towards structure.</description>
    <label>Structure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>