unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Total_Plus_Revision_Hours_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Plus_Revision_Hours_Formula__c</fullName>
    <formula>Hours_Per_Unit_Subtotal__c + Estimated_Hours_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours per Unit + Revisions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>