unpackaged/main/default/objects/GC_Design_Request_Form_Budget__c/fields/Update_Graphics_only_on_Structure_Units__c.field-meta.xml
<CustomField>
    <fullName>Update_Graphics_only_on_Structure_Units__c</fullName>
    <description>Estimate for how many revisions may occur pertaining to update graphics on structure.</description>
    <inlineHelpText>Estimate for how many revisions may occur pertaining to update graphics on structure.</inlineHelpText>
    <label>Update Graphics only on Structure -#Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>